--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         <p class="randomString">Loading fact..</p>
         <button class="button" onclick="window.location.href='/tools'">Tools Page</button>
     </div>
+    <div class="navbar">
+        <button onclick="document.location.href='/'" class="navbar__button">🏠</button>
+    </div>
     <p class="changelogs">
-        August 7th, 2024: Completely new UI, and new Tools Menu.
+        August 7-8th, 2024: Completely new UI, and new Tools Menu. (+ Bug Fixes)
     </p>
     <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
     <script>
