--- a/tools.html
+++ b/tools.html
@@ -10,11 +10,14 @@
 <body>
     <div class="content">
         <h3>School</h3>
-        <button class="button" onclick="document.location.href='/tools/games'" style="background:linear-gradient(45deg, #528535, #006eff);">Unblocked Games</button>
-        <button class="button" style="background: linear-gradient(135deg, #3700ff, #d400ff);">Dark Mode Extension</button>
+        <div class="school__column">
+            <button class="button" onclick="document.location.href='/tools/games'" style="background:linear-gradient(45deg, #528535, #006eff);">Unblocked Games</button>
+            <button class="button" style="background: linear-gradient(135deg, #3700ff, #d400ff);">Dark Mode Extension</button>
+        </div>
         <p></p>
-        <h3>Exit</h3>
-        <button class="button" onclick="document.location.href='/'">Return to Home</button>
+    </div>
+    <div class="navbar">
+        <button onclick="document.location.href='/'" class="navbar__button">🏠</button>
     </div>
     <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
     <script>
