--- a/tools/games.html
+++ b/tools/games.html
@@ -10,20 +10,17 @@
 <body>
     <div class="content">
         <h3>Games</h3>
-        <button class="button" style="background:linear-gradient(45deg, #528535, #006eff);">EaglercraftX 1.8.9</button>
-        <button class="button" style="background: linear-gradient(135deg, #3700ff, #d400ff);">Poki Games</button>
-        <p></p>
-        <button class="button">More Coming Soon...</button>
-        <div class="column">
-            <div class="column__item">
-                <h3>Feedback</h3>
-                <button class="button" onclick="document.location.href='games/feedback'">Report Broken Games</button>
-            </div>
-            <div class="column__item">
-                <h3>Go Back</h3>
-                <button class="button" onclick="document.location.href='../tools'">Return to Previous</button>
-            </div>
+        <div class="games__column">
+            <button class="button" style="background:linear-gradient(45deg, #528535, #006eff);">EaglercraftX 1.8.9</button>
+            <button class="button" style="background: linear-gradient(135deg, #3700ff, #d400ff);">Poki Games</button>
         </div>
+        <p></p>
+        <h3>Feedback</h3>
+        <button class="button" onclick="document.location.href='../games/feedback.html'">Report Broken Game</button>
+        <p></p>
+    </div>
+    <div class="navbar">
+        <button onclick="document.location.href='../'" class="navbar__button">🏠</button>
     </div>
     <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
     <script>
