Completely new UI, and new Tools Menu. (+ Bug Fixes)

--- a/tools.html
+++ b/tools.html
@@ -12,7 +12,7 @@
         <h3>School</h3>
         <div class="school__column">
             <button class="button" onclick="document.location.href='/tools/games'" style="background:linear-gradient(45deg, #528535, #006eff);">Unblocked Games</button>
-            <button class="button" style="background: linear-gradient(135deg, #3700ff, #d400ff);">Dark Mode Extension</button>
+            <button class="button" style="background: linear-gradient(135deg, #3700ff, #d400ff);">Coming Soon</button>
         </div>
         <p></p>
     </div>
