--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <div class="content">
-        <img onclick="document.location.href='https://discord.gg/invite/etNp9puMkP'" src="assets/discord.png" width="250" height="250">
+        <img class="discord" onclick="document.location.href='https://discord.gg/invite/etNp9puMkP'" src="assets/discord.png" width="250" height="250">
         <h1>@unk3mpt utility</h1>
         <p>psssst.. click the image above this text to join my discord.</p>
         <p class="randomString">Loading fact..</p>
-        <button class="button" onclick="window.location.href='/tools'">Tools Page</button>
+        <div class="content__column">
+            <button class="button" onclick="window.location.href='/tools'">Tools Page</button>
+            <button class="kofi" onclick="window.location.href='https://ko-fi.com/rykersage'">Support me</button>
+        </div>
     </div>
     <div class="navbar">
         <button onclick="document.location.href='/'" class="navbar__button">🏠</button>
@@ -21,15 +24,7 @@
     <p class="changelogs">
         August 7-8th, 2024: Completely new UI, and new Tools Menu. (+ Bug Fixes)
     </p>
-    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-    <script>
-        kofiWidgetOverlay.draw('rykersage', {
-            'type': 'floating-chat',
-            'floating-chat.donateButton.text': 'Support me',
-            'floating-chat.donateButton.background-color': '#d9534f',
-            'floating-chat.donateButton.text-color': '#fff'
-        });
-    </script>
+    
     <script type="module">
         const fact = fetch('https://uselessfacts.jsph.pl/api/v2/facts/random').then(fact => {
             fact.json().then(fact => {
