Revamped UI + EAGLERCRAFT!

--- a/games/feedback.html
+++ b/games/feedback.html
@@ -18,7 +18,7 @@
         <div class="column">
             <div class="column__item">
                 <h3>Go Back</h3>
-                <button class="button" onclick="document.location.href='../tools/games.html'">Return to Previous</button>
+                <button class="button" onclick="document.location.href='../tools/games'">Return to Previous</button>
             </div>
         </div>
     </div>
