--- a/tools/games.html
+++ b/tools/games.html
@@ -10,13 +10,17 @@
 <body>
     <div class="content">
         <h3>Games</h3>
-        <div class="games__column">
-            <button class="button" style="background:linear-gradient(45deg, #528535, #006eff);">EaglercraftX 1.8.9</button>
-            <button class="button" style="background: linear-gradient(135deg, #3700ff, #d400ff);">Poki Games</button>
+        <div class="content__games">
+            <div class="games__window" onclick="document.location.href='../games/eaglercraft'">
+                <img src="https://eaglercraft.com/img/Official_Minecraft_Trailer.webp">
+                <h1>Eaglercraft</h1>
+            </div>
         </div>
         <p></p>
-        <h3>Feedback</h3>
-        <button class="button" onclick="document.location.href='../games/feedback.html'">Report Broken Game</button>
+        <div class="fixed">
+            <h3>Feedback</h3>
+            <button class="button" onclick="document.location.href='../games/feedback'">Report Broken Game</button>
+        </div>
         <p></p>
     </div>
     <div class="navbar">
