EAGLERCRAFT! + Several Bug Fixes

--- a/games/feedback.html
+++ b/games/feedback.html
@@ -15,15 +15,10 @@
             <input type="text" placeholder="Title of the game." required>
             <input type="button" value="Submit" style="background: linear-gradient(135deg, #009189, #1900ff);">
         </form>
-        <div class="column">
-            <div class="column__item">
-                <h3>Go Back</h3>
-                <button class="button" onclick="document.location.href='../tools/games'">Return to Previous</button>
-            </div>
-        </div>
     </div>
     <div class="navbar">
         <button onclick="document.location.href='../'" class="navbar__button">🏠</button>
+        <button onclick="document.location.href='../tools/games'" class="navbar__button">⬅</button>
     </div>
     <script type="module">
         const webhookUrl = 'https://discord.com/api/webhooks/1270944820013305856/ftPHNvTj2r_RtB1paykUYGF_pMgPgTGF80x7mxbZ3GfZzvA4BcnvY-xQsSYQK_N4LqRJ';
