EAGLERCRAFT! + NEW UI / Bug Fixes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button onclick="document.location.href='/'" class="navbar__button">🏠</button>
     </div>
     <p class="changelogs">
-        August 7-8th, 2024: Completely new UI, and new Tools Menu. (+ Bug Fixes)
+        August 8th, 2024: EAGLERCRAFT! + NEW UI / Bug Fixes
     </p>
     
     <script type="module">
